completed : admin routes and partial completed user routes
